# apg_trajectory_tracking

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pyproject.toml  todos.md
neural_control/controllers/: mpc.py  network_wrapper.py
neural_control/dynamics/: _typing.py  cartpole_dynamics.py  fixed_wing_2D.py  fixed_wing_dynamics.py  learnt_dynamics.py  quad_dynamics_base.py  quad_dynamics_flightmare.py  quad_dynamics_simple.py  quad_dynamics_trained.py
neural_control/environments/: cartpole_env.py  cartpole_rendering.py  drone_env.py  helper_simple_env.py  rendering.py  rl_envs.py  wing_env.py
neural_control/models/: hutter_model.py  resnet_like_model.py  rnn.py  simple_model.py
neural_control/trajectory/: circle.py  generate_trajectory.py  plan_trajectory.py  polynomial.py  q_funcs.py  random_traj.py  straight.py
scripts/: gen_stub.sh
